force-app/main/default/objects/Account/fields/Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax__c</fullName>
    <formula>AnnualRevenue *0.07</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>