force-app/main/default/objects/Account/fields/Share_Record_To_User__c.field-meta.xml
<CustomField>
    <fullName>Share_Record_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Share Record To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>