force-app/main/default/objects/Account/validationRules/Activation_Summary.validationRule-meta.xml
<ValidationRule>
    <fullName>Activation_Summary</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Active1__c == True &amp;&amp; Account_Activation_Summary__c == &apos;&apos; &amp;&amp; (TEXT(Type) ==&apos;Customer - Channel&apos; || TEXT(Type) ==&apos;Customer - Direct&apos;) ,True ,False)</errorConditionFormula>
    <errorDisplayField>Account_Activation_Summary__c</errorDisplayField>
    <errorMessage>Account Activation Summary Required Field</errorMessage>
</ValidationRule>