force-app/main/default/objects/Account/listViews/Hot_Rating_Customer.listView-meta.xml
<ListView>
    <fullName>Hot_Rating_Customer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RATING</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <label>Hot Rating Customer</label>
</ListView>